# project-template

./: LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yaml
hooks/: post_gen_project.py  test_hooks.py
{{cookiecutter.__project_slug}}/: .python-version  Dockerfile  README.md  pyproject.toml
{{cookiecutter.__project_slug}}/.github/workflows/: test.yaml
{{cookiecutter.__project_slug}}/tests/: test_job.py
