[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "Python project template using cookiecutter"
authors = ["iplitharas <johnplitharas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
