[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "Python project template using cookiecutter"
authors = ["iplitharas <johnplitharas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"
isort = "^5.13.2"
ruff = "^0.3.5"
pytest = "^8.1.1"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"
hypothesis = "^6.100.1"
mutmut = "^2.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
